syntax = "proto3";
package pt.ulisboa.tecnico.distledger.contract;

// Common definitions of the DistLedger Service contract

enum OperationType {
  OP_UNSPECIFIED = 0;
  OP_TRANSFER_TO = 1;
  OP_CREATE_ACCOUNT = 2;
  OP_DELETE_ACCOUNT = 3;
}

message Operation {
  OperationType type = 1;
  string userId = 2;
  int64 uid = 3;
  Timestamp prev = 4;
  Timestamp ts = 5;
  string destUserId = 6;  //only for transferTo operations
  int32 amount = 7;  //only for transferTo operations
}

message Timestamp {
  map<string, uint32> timestamp = 1;
}

message LedgerState {
  repeated Operation ledger = 1;
}

