syntax = "proto3";
package pt.ulisboa.tecnico.distledger.contract.distledgerserver;

// Interface for naming server

message RegisterRequest {
    string serviceName = 1;
    string qualifier = 2;
    string address = 3;
}

message RegisterResponse { }

message LookupRequest {
  string servicename = 1;
  string qualifier = 2;
}

message LookupResponse {
  repeated string services = 1;
}

message DeleteRequest {
  string serviceName = 1;
  string hostname = 2;
}

message DeleteResponse { }

service NamingService {
  rpc register(RegisterRequest) returns (RegisterResponse);
  rpc lookup(LookupRequest) returns (LookupResponse);
  rpc delete(DeleteRequest) returns (DeleteResponse);
}

